# ETNA_EDA

./: .gitignore  README.md  pyproject.toml
data/: ride_data.csv
src/EDA/: metric_calculation.py
