[tool.poetry]
name = "etna-eda"
version = "0.1.0"
description = "EDA with ETNA (geospatial data)"
authors = ["Andrey Alekseev"]
license = ""
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.10.0"
etna = {extras = ["prophet"], version = "^1.15.0"}
haversine = "^2.5.1"
Shapely = "^1.8.1"
geojson = "^2.5.0"
folium = "^0.12.1"
holoviews = "^1.14.8"
dask = "^2022.2.1"
xarray = "^2022.3.0"
datashader = "^0.13.0"
bokeh = "^2.4.2"
global-land-mask = "^1.0.0"
h3 = "^3.7.3"
jupyter = "^1.0.0"
notebook = "^6.5.2"
pandarallel = "^1.6.4"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
